Exam mode: Improve filtering of exercise information